Added random short_code generator in CreateUrl handler and implemented RedirectUrl
